js/js.translator/testData/incremental/invalidation/esModules/main/testHashCode.kt
fun testHashCode(d: Demo): Int {
    return d.hashCode()
}
